@@ -6,19 +6,7 @@ xcopy /E /Y update .
 rmdir /S /Q update
 
 :START
-if "%PROCESSOR_ARCHITECTURE%" == "x86" goto START_X86
-goto START_AMD64
-
-
-:START_X86
-java -Djava.library.path=lib/dlls/Windows/i368 -cp jergometer.jar;lib\RXTXcomm.jar org.jergometer.Jergometer %1
-
-IF errorlevel 255 goto UPDATE
-goto END
-
-
-:START_AMD64
-java -Djava.library.path=lib/dlls/Windows/i368 -cp jergometer.jar;lib\RXTXcomm.jar org.jergometer.Jergometer %1
+start\windows_start.bat
 
 IF errorlevel 255 goto UPDATE
 goto END
